--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
         {% if user.is_authenticated %}
         <div class="text-white">Hello, <strong>{{user.username}}</strong>!</div>
 
-        <a href="/accounts/" class="btn btn-success ml-4">New Page</a>
+        <a href="{% url 'new-wiki' %}" class="btn btn-success ml-4">New Page</a>
         <a href="{% url 'logout' %}" class="btn btn-danger ml-2">Log Out</a>
         {% else %}
         <a href="{% url 'login' %}" class="btn btn-secondary ml-2">Log In</a>
